--- a/spidersdk/src/main/AndroidManifest.xml
+++ b/spidersdk/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         <meta-data
             android:name="xwalk_verify"
             android:value="disable" />
-        <!--<meta-data-->
-        <!--android:name="xwalk_apk_url"-->
-        <!--android:value="http://test.iguoxue.org/spider/crosswalk.php" />-->
-
         <meta-data
-            android:name="xwalk_apk_url"
-            android:value="http://172.19.22.235/h5Test/dist/crosswalk.php" />
+        android:name="xwalk_apk_url"
+        android:value="http://test.iguoxue.org/spider/crosswalk.php" />
+
+        <!--<meta-data-->
+            <!--android:name="xwalk_apk_url"-->
+            <!--android:value="http://172.19.22.235/h5Test/dist/crosswalk.php" />-->
     </application>
 
 </manifest>
