--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,10 @@ repositories {
 
 
 dependencies {
-
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
     compile project(":spidersdk")
     compile(name: "common-release", ext: "aar")
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
     compile "com.android.support:design:${rootProject.ext.supportVersion}"
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
