--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,13 @@ android {
             signingConfig signingConfigs.release
             shrinkResources true //去除无用资源
         }
+
+        debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+            shrinkResources true //去除无用资源
+        }
     }
 
     productFlavors {
