--- a/spidersdk/src/main/AndroidManifest.xml
+++ b/spidersdk/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".SpiderActivity" />
+        <activity android:name=".SpiderActivity"   android:theme="@style/ColorTranslucentTheme" />
         <meta-data
             android:name="QBSDKAppKey"
             android:value="Him/QbcsWWwbclSrL6AkioXU" />
