--- a/spidersdk/src/main/AndroidManifest.xml
+++ b/spidersdk/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
         <meta-data
         android:name="xwalk_apk_url"
-        android:value="http://test.iguoxue.org/spider/crosswalk.php" />
+        android:value="http://119.29.112.230:4832/crosswalk.php" />
 
         <!--<meta-data-->
             <!--android:name="xwalk_apk_url"-->
