--- a/spidersdk/src/main/AndroidManifest.xml
+++ b/spidersdk/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
+        <uses-permission android:name="android.permission.INTERNET"/>
         <activity android:name=".SpiderActivity"   android:theme="@style/ColorTranslucentTheme" />
         <meta-data
             android:name="QBSDKAppKey"
