--- a/spidersdk/build.gradle
+++ b/spidersdk/build.gradle
@@ -33,7 +33,8 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
+    compile files('libs/zmxySDKALCmini_V1.01450366738902_release.jar')
 }
